# rigrag

./: Cargo.toml  README.md  README_ja.md
.github/workflows/: release.yml
src/: args.rs  chat.rs  conf.rs  crawler.rs  db_store.rs  main.rs  models.rs  reader.rs  tools.rs
src/reader/: epub.rs  excel.rs  excel_old.rs  file_list.rs  java.rs  markdown.rs  pdf.rs  powerpoint.rs  text.rs  word.rs
src/system/: system_chat_en.md  system_chat_ja.md  system_image_en.md  system_image_ja.md
src/tools/: adder.rs  average.rs  divide.rs  multiply.rs  search.json  search.rs  subtract.rs  sum.rs  today.rs
