[package]
name = "rigrag"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time", "io-util"] }
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"

calamine = { version = "0.34.0", features = ["picture"] }
docx-rs = "0.4.19"
rustypptx = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
text-splitter = { version = "0.29.3", features = ["tokenizers", "markdown"] }
tokenizers = {version = "0.22.2", default-features = false, features = ["http", "onig"] }

arrow-array = "56.2.0"
arrow-schema = "56.2.0"
lancedb = "0.23.1"
rig-core = { version = "0.33.0", features = ["derive"] }
rig-lancedb = "0.4.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ollama-rs = { version = "0.3.4", features = ["stream"] }
indicatif = "0.18.4"
regex = "1.12.3"
lazy_static = "1.4.0"
num_cpus = "1.17.0"
rust-code-analysis = { version = "0.0.24"}
epub = "2.1.5"
scraper = "0.26.0"
base64 = "0.22.1"
umya-spreadsheet = "2.3.3"
asciidocr = "0.1.14"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
dialoguer = "0.12.0"
confy = "2.0.0"
thiserror = "2.0.18"
schemars = "1.2.1"
sys-locale = "0.3.2"
pdf_oxide = "0.3.21"
chrono = "0.4.44"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
